# universal-rules

./: .gitignore  AGENTS.md  Justfile  README.md  install_deps.sh  setup.sh
rule_unifier_cli/: Cargo.toml  README.md
rule_unifier_cli/src/: gitignore_manager.rs  universal_rule.rs
rule_unifier_cli/src/converters/: cursor.rs  mod.rs
src/: gitignore_manager.rs  main.rs  rule_parser.rs
src/converters/: claude.rs  cursor.rs  mod.rs  windsurf.rs
tests/: integration_tests.rs
