[package]
name = "rule_unifier_cli"
version = "0.1.0"
edition = "2021"
description = "A CLI tool to unify coding agent rules from a universal format."
license = "MIT" # Or "MIT OR Apache-2.0" if dual-licensed

[[bin]]
name = "urules"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.34"
walkdir = "2.5.0"
# pulldown-cmark is not directly used by the CLI logic, but might be part of a rule's content.
# For the CLI tool itself, it's not a direct dependency for compilation or running.
# If it were used for processing markdown content *within* the CLI, it would be needed.
# pulldown-cmark = "0.10.0" 
anyhow = "1.0.82"
glob = "0.3.1" # Used by rule_parser, indirectly.

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
# walkdir is already a main dependency, but listing it here is fine if it were only for tests.
# For specific test assertions on directory structures, it could be useful.
# walkdir = "2.4" 
